fix bug #46191 (BC break: DOMDocument saveXML() doesn't accept null)